Update the swagger
